# libpango

./: meson.build
examples/: meson.build
pango/: pangocairo-fcfontmap.c  pangofc-fontmap-private.h  pangofc-fontmap.c
tests/: meson.build
tools/: meson.build
utils/: meson.build
